--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 	</head>
 	<body>
 		<h2> JavaScript. Урок 1. </h2>
+        <div id="vd">
+            M:<input id="M" type="text" value = "20" size="5"/>
+            N :<input id="N" type="text" value = "20" size="5"/> 
+            <button id="btnRun">Вперед!</button>
+        </div>
+
+
 		<div id="matrix">
 
 		</div>
