--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 	<head>
-		<title> JavaScript.</title>
+		<title> JavaScript </title>
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="style.css" type="text/css"/>
-        <script src="script.js"></script>
 	</head>
 	<body>
-		<h2> JavaScript. Урок 1. </h2>
-        <div id="vd">
-            M:<input id="M" type="text" value = "20" size="5"/>
-            N :<input id="N" type="text" value = "20" size="5"/> 
-            <button id="btnRun">Вперед!</button>
-        </div>
+		<h1> JavaScript. Урок 1 </h1>
+		<h3> Домашнее задание. </h3>
+		
+		<ul>
 
+				<li> <a href="page1.html"> Домашнее задание 1.1 Таблицы </a> </li>
+				<li> <a href="page2.html"> Домашнее задание 1.2 Шахматка </a> </li>
 
-		<div id="matrix">
-
-		</div>
-
+		</ul>
+		<footer>
+			&copy;<i>Каращук А.Ф.</i>
+		</footer>
+	
 	</body>
 
 </html>
