--- a/page2.html
+++ b/page2.html
@@ -5,11 +5,10 @@
 		<meta charset="utf-8" />
 		<link rel="stylesheet" href="style2.css" type="text/css"/>
         <script src="script2.js"></script>
-        <script src="script3.js"></script>
 	</head>
 	<body>
-		<h2> JavaScript. Урок 1.1 Шахматка. </h2>
-		<table id="Mytable" cellspacing="0">
+		<h2> JavaScript. Урок 1.2 Шахматка. </h2>
+		<table id="Mytable" cellspacing="1">
 			<tr> 
 					<td class="name"></td>
 					<td class="name">A</td>
@@ -24,7 +23,10 @@
 			</tr>
 
 		</table>
+        <p>Log</p>
+        <div id='log'></div>
 
 	</body>
+    <script src="script3.js"></script>
 
 </html>
